Fixed scroll for TripsPage

--- a/Travely.Client/Pages/TripsPage.xaml
+++ b/Travely.Client/Pages/TripsPage.xaml
@@ -6,55 +6,57 @@
              x:Class="Travely.Client.Pages.TripsPage"
              Title="My Trips">
 
-    <VerticalStackLayout>
-        <Button Text="{x:Static resources:TripsResources.StartPlanningButton}" BackgroundColor="Black" HeightRequest="40" WidthRequest="150" Margin="0,0,20,0"
-             Grid.Row="0" Grid.Column="1" HorizontalOptions="End" VerticalOptions="Start"  Clicked="StartPlanning"/>
+    <ScrollView>
+        <VerticalStackLayout>
+            <Button Text="{x:Static resources:TripsResources.StartPlanningButton}" BackgroundColor="Black" HeightRequest="40" WidthRequest="150" Margin="0,0,20,0"
+                 Grid.Row="0" Grid.Column="1" HorizontalOptions="End" VerticalOptions="Start"  Clicked="StartPlanning"/>
 
-        <CollectionView x:DataType="viewModels:TripsViewModel" ItemsSource="{Binding Trips}" SelectionMode="Single" >
-            <CollectionView.ItemTemplate>
-                <DataTemplate x:DataType="viewModels:TripViewModel">
-                    <Frame Margin="10" Padding="0">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="30"/>
-                                <ColumnDefinition Width="30"/>
-                            </Grid.ColumnDefinitions>
+            <CollectionView x:DataType="viewModels:TripsViewModel" ItemsSource="{Binding Trips}" SelectionMode="Single" >
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="viewModels:TripViewModel">
+                        <Frame Margin="10" Padding="0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="30"/>
+                                    <ColumnDefinition Width="30"/>
+                                </Grid.ColumnDefinitions>
 
-                            <Grid Grid.Column="0">
-                                <Image Source="{Binding CountryURL}" Aspect="AspectFill"/>
-                                <StackLayout Margin="10">
-                                    <Label Text="{Binding TripTitle}" FontAttributes="Bold" FontSize="18"/>
-                                    <Label Text="{Binding CountryName}" FontAttributes="Bold" FontSize="16"/>
-                                    <Label Text="{Binding StartDate, StringFormat='{0:dd MMM yyyy}'}"/>
-                                    <Label Text="{Binding EndDate, StringFormat='{0:dd MMM yyyy}'}"/>
+                                <Grid Grid.Column="0">
+                                    <Image Source="{Binding CountryURL}" Aspect="AspectFill"/>
+                                    <StackLayout Margin="10">
+                                        <Label Text="{Binding TripTitle}" FontAttributes="Bold" FontSize="18"/>
+                                        <Label Text="{Binding CountryName}" FontAttributes="Bold" FontSize="16"/>
+                                        <Label Text="{Binding StartDate, StringFormat='{0:dd MMM yyyy}'}"/>
+                                        <Label Text="{Binding EndDate, StringFormat='{0:dd MMM yyyy}'}"/>
 
-                                </StackLayout>
+                                    </StackLayout>
+                                </Grid>
+
+                                <ImageButton Grid.Column="1" 
+                                             Source="edit_icon.png" 
+                                             WidthRequest="20" HeightRequest="20" 
+                                             HorizontalOptions="End" VerticalOptions="Start"
+                                             BackgroundColor="Transparent"
+                                             Clicked="NavigateToEditTripPage"
+                                             Margin="10"/>
+
+                                <ImageButton Grid.Column="4" 
+                                             Source="delete_icon.png" 
+                                             WidthRequest="20" HeightRequest="20" 
+                                             HorizontalOptions="End" VerticalOptions="Start"
+                                             BackgroundColor="Transparent"
+                                             Command="{Binding DeleteCommand}" 
+                                             CommandParameter="{Binding Id}"
+                                             Margin="10"/>
                             </Grid>
-
-                            <ImageButton Grid.Column="1" 
-                                         Source="edit_icon.png" 
-                                         WidthRequest="20" HeightRequest="20" 
-                                         HorizontalOptions="End" VerticalOptions="Start"
-                                         BackgroundColor="Transparent"
-                                         Clicked="NavigateToEditTripPage"
-                                         Margin="10"/>
-
-                            <ImageButton Grid.Column="4" 
-                                         Source="delete_icon.png" 
-                                         WidthRequest="20" HeightRequest="20" 
-                                         HorizontalOptions="End" VerticalOptions="Start"
-                                         BackgroundColor="Transparent"
-                                         Command="{Binding DeleteCommand}" 
-                                         CommandParameter="{Binding Id}"
-                                         Margin="10"/>
-                        </Grid>
-                    </Frame>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </VerticalStackLayout>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
