--- a/Travely.Client/AppShell.xaml
+++ b/Travely.Client/AppShell.xaml
@@ -4,29 +4,34 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Travely.Client.Pages"
-    Shell.FlyoutBehavior="Flyout"
-    Title="Travely.Client">
+    Shell.FlyoutBehavior="Disabled"
+    Title="Travely.Client"
+    Shell.TitleColor="Black"
+   >
+   
 
-    <FlyoutItem Title="Home" FlyoutDisplayOptions="AsMultipleItems" >
+    <TabBar >
         <ShellContent
             Title="Dashboard"
             ContentTemplate="{DataTemplate local:DashboardPage}"
             Route="Dashboard"
-            Icon="home.svg"/>
+            Icon="home.svg"
+            />
 
         <ShellContent
             Title="Profile"
             ContentTemplate="{DataTemplate local:ProfilePage}"
             Route="Profile"
-            Icon="user.svg"/>
+            Icon="user.svg"
+            />
 
         <ShellContent
             Title="My Trips"
             ContentTemplate="{DataTemplate local:TripsPage}"
             Route="MyTrips" 
-            Icon="plane.svg"/>
-
-    </FlyoutItem>
+            Icon="plane.svg"
+            />
+    </TabBar>
 
     <ShellContent Title="Edit Trip" Route="EditTripPage" ContentTemplate="{DataTemplate local:EditTripPage}" />
     
