--- a/Travely.Client/Pages/TripPackingPage.xaml
+++ b/Travely.Client/Pages/TripPackingPage.xaml
@@ -8,15 +8,46 @@
              Title="Pack for Your Trip">
 
     <ScrollView>
-        <VerticalStackLayout>
-            <Entry Placeholder="{x:Static resources:PackingListResources.EnterNewItem}" Text="{Binding ItemInput}"/>
-            <Button Text="{x:Static resources:PackingListResources.AddButton}" Command="{Binding AddItemCommand}" />
+        <VerticalStackLayout Spacing="10">
+            <Grid Margin="20,10,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Entry 
+                    Grid.Column="0"
+                    Placeholder="{x:Static resources:PackingListResources.EnterNewItem}" 
+                    Text="{Binding ItemInput}"
+                    Margin="0,10"
+                    BackgroundColor="#F0F0F0"
+                    TextColor="#333"
+                    FontSize="18"
+                    />
+                <ImageButton 
+                    Grid.Column="1"
+                    Source="add.png"
+                    Command="{Binding AddItemCommand}"
+                    WidthRequest="100" HeightRequest="50" 
+                    Margin="0,10,0,10"
+                    />
+            </Grid>
             <CollectionView ItemsSource="{Binding Items}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <HorizontalStackLayout>
-                            <CheckBox />
-                            <Label Text="{Binding .}" VerticalOptions="Center" />
+                        <HorizontalStackLayout 
+                            BackgroundColor="#F0F0F0"
+                            Margin="20,0,20,10"
+                            >
+                            <CheckBox 
+                                Color="Green"
+                                Margin="10,0,0,0"
+                                />
+                            <Label 
+                                Text="{Binding .}"
+                                TextColor="#555"
+                                FontSize="16"
+                                VerticalOptions="Center" 
+                                />
                         </HorizontalStackLayout>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
