Modified the color of back button

--- a/Travely.Client/AppShell.xaml
+++ b/Travely.Client/AppShell.xaml
@@ -6,7 +6,7 @@
     xmlns:local="clr-namespace:Travely.Client.Pages"
     Shell.FlyoutBehavior="Disabled"
     Title="Travely.Client"
-    Shell.TitleColor="Black"
+    Shell.TitleColor="White"
    >
    
     <TabBar >
