--- a/Travely.Client/Pages/PlanTripPage.xaml
+++ b/Travely.Client/Pages/PlanTripPage.xaml
@@ -4,16 +4,19 @@
              xmlns:resources="clr-namespace:Travely.Client.Resources.UIResources"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Travely.Client.Pages.PlanTripPage"
-             x:DataType="viewModels:TripViewModel">
+             x:DataType="viewModels:TripViewModel"
+              Title="Plan A Trip">
     <Grid>
         <StackLayout>
-            <Label Text="{x:Static resources:PlanTripResources.PageTitle}" 
+            <!--<Label Text="{x:Static resources:PlanTripResources.PageTitle}" 
                    TextTransform="Uppercase"
                    FontAttributes="Bold" HorizontalOptions="Center" 
                    VerticalOptions="Center" 
                    FontSize="Large" 
-                   Margin="0,10,0,0" />
-            <Image Source="adventure_logo" HorizontalOptions="Center" WidthRequest="150" HeightRequest="130" Margin="0,-10,0,0" />
+                   Margin="0,10,0,0" />-->
+           <!-- <Image Source="adventure_logo" HorizontalOptions="Center" WidthRequest="150" HeightRequest="130" Margin="0,-10,0,0" />-->
+
+            <Image Source="adventure_logo" HorizontalOptions="Center" WidthRequest="150" HeightRequest="130" Margin="0,20,0,0" />
 
             <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="15">
                 <Entry Text="{Binding TripTitle}" 
