--- a/Travely.Client/Pages/TripsPage.xaml
+++ b/Travely.Client/Pages/TripsPage.xaml
@@ -24,14 +24,35 @@
                                     <ColumnDefinition Width="30"/>
                                 </Grid.ColumnDefinitions>
 
-                                <Grid Grid.Column="0">
+                                <Grid Grid.Column="0" >
                                     <Image Source="{Binding CountryURL}" Aspect="AspectFill"/>
                                     <StackLayout Margin="10">
-                                        <Label Text="{Binding TripTitle}" FontAttributes="Bold" FontSize="18"/>
-                                        <Label Text="{Binding CountryName}" FontAttributes="Bold" FontSize="16"/>
-                                        <Label Text="{Binding StartDate, StringFormat='{0:dd MMM yyyy}'}"/>
-                                        <Label Text="{Binding EndDate, StringFormat='{0:dd MMM yyyy}'}"/>
+                                        <Label Text="{Binding TripTitle}" FontAttributes="Bold" FontSize="14" Margin="100,10,0,0"/>
+                                        <Image Source="adventure_logo"  WidthRequest="150" HeightRequest="130"  Margin="50,-10,0,0" Grid.RowSpan="3" Grid.Column="0" />
+                                        <StackLayout Grid.Column="1" VerticalOptions="Center" Margin="10,0,0,0">
+                                            <Grid>
+                                              
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="Auto"/>
+                                                    <RowDefinition Height="Auto"/>
+                                                </Grid.RowDefinitions>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="Auto"/>
+                                                    <ColumnDefinition Width="Auto"/>
+                                                    <ColumnDefinition Width="Auto"/>
+                                                </Grid.ColumnDefinitions>
 
+                                                
+                                                <Label Text="City " FontAttributes="Bold" FontSize="16" Grid.Row="0" Grid.Column="0"/>
+                                                <Label Text="Start Date " FontAttributes="Bold" FontSize="16" Grid.Row="0" Grid.Column="1"/>
+                                                <Label Text="End Date " FontAttributes="Bold" FontSize="16" Grid.Row="0" Grid.Column="2"/>
+
+                                                
+                                                <Label Text="{Binding CountryName}" FontSize="16" Grid.Row="1" Grid.Column="0" Margin="0,0,50,0"/>
+                                                <Label Text="{Binding StartDate, StringFormat='{0:dd.MM.yyyy}'}" Grid.Row="1" Grid.Column="1" Margin="0,0,50,0"/>
+                                                <Label Text="{Binding EndDate, StringFormat='{0:dd.MM.yyyy}'}" Grid.Row="1" Grid.Column="2" Margin="0,0,40,0" />
+                                            </Grid>
+                                        </StackLayout>
                                     </StackLayout>
                                 </Grid>
 
