--- a/Travely.Client/Pages/TripPackingPage.xaml
+++ b/Travely.Client/Pages/TripPackingPage.xaml
@@ -18,6 +18,7 @@
 
                 <Entry 
                     Grid.Column="0"
+                    x:Name="PackingItemEntry"
                     Placeholder="{x:Static resources:TripPackingResources.EnterNewItem}" 
                     Text="{Binding PackingItem}"
                     Margin="0,10"
@@ -30,6 +31,7 @@
                     Grid.Column="1"
                     Source="add.png"
                     Command="{Binding AddItemCommand}"
+                    Clicked="OnAddItem"
                     WidthRequest="100" HeightRequest="50" 
                     Margin="0,10,0,10"
                     />
@@ -38,22 +40,33 @@
             <CollectionView ItemsSource="{Binding PackingItems}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="dtos:PackingItemDTO">
-                        <HorizontalStackLayout 
-                            BackgroundColor="#F0F0F0"
-                            Margin="20,0,20,10">
+                        <Grid Margin="20,0,20,10" BackgroundColor="#F0F0F0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
 
                             <CheckBox 
+                                Grid.Column="0"
                                 Color="Green"
                                 Margin="10,0,0,0"
                                 IsChecked="{Binding IsPacked}" />
 
-                            <Label 
+                            <Entry 
+                                Grid.Column="1"
                                 Text="{Binding Title}"
                                 TextColor="#555"
                                 FontSize="16"
                                 VerticalOptions="Center" />
 
-                        </HorizontalStackLayout>
+                            <ImageButton 
+                                Grid.Column="2"
+                                Source="x_icon.png" 
+                                WidthRequest="20" HeightRequest="20" 
+                                BackgroundColor="Transparent" 
+                                Margin="10"/>
+                        </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
