--- a/Travely.Client/Pages/TripPackingPage.xaml
+++ b/Travely.Client/Pages/TripPackingPage.xaml
@@ -65,7 +65,7 @@
                                 WidthRequest="20" HeightRequest="20" 
                                 BackgroundColor="Transparent" 
                                 Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.DeleteItemCommand}"
-                                CommandParameter="{Binding Title}"
+                                CommandParameter="{Binding Id}"
                                 Margin="10"/>
                         </Grid>
                     </DataTemplate>
